--- a/gmd/html/index.html
+++ b/gmd/html/index.html
@@ -7,268 +7,197 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    * {
-      margin: 0; padding: 0;
-      box-sizing: border-box;
-    }
     body {
       font-family: 'Inter', sans-serif;
       background-color: #f9fafa;
       color: #1a1a1a;
     }
 
-    .layout {
-      display: flex;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    .sidebar {
-      width: 240px;
-      background-color: #016948;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      padding: 2rem 1rem;
-      justify-content: space-between;
-    }
-
-    .sidebar a:hover,
-    .sidebar a.active {
-      background-color: #019d70;
-    }
-
-    .main {
-      flex: 1;
-      overflow-y: auto;
-      padding: 1.5rem 2rem;
-    }
-
     .slider-container {
-    position: relative;
-    width: 100%;
-    max-width: 100%;
-    height: 250px;
-    border-radius: 1rem;
-    overflow: hidden;
-    margin-bottom: 2rem;
-    margin-right: 6rem
-  }
-
-  @media (min-width: 768px) {
-    .slider-container {
+      position: relative;
+      width: 100%;
       height: 250px;
+      border-radius: 1rem;
+      overflow: hidden;
+      margin-bottom: 2rem;
     }
-  }
 
-  .slider {
-    display: flex;
-    transition: transform 0.6s ease-in-out;
-    width: 100%;
-    height: 100%;
-  }
+    .slider {
+      display: flex;
+      transition: transform 0.6s ease-in-out;
+      width: 100%;
+      height: 100%;
+    }
 
-  .slider img {
-    width: 100%;
-    flex-shrink: 0;
-    object-fit: cover;
-    height: 100%;
-    border-radius: 1rem;
-  }
-
-    .balance-amount {
-      font-size: 2.5rem;
-      font-weight: bold;
-      color: #016948;
+    .slider img {
+      width: 100%;
+      flex-shrink: 0;
+      object-fit: cover;
+      height: 100%;
+      border-radius: 1rem;
     }
   </style>
 </head>
-<body>
-  <div class="layout">
-    <!-- Sidebar -->
-    <aside class="sidebar">
-      <div>
-        <h2 class="text-xl font-bold mb-6">GMD FINANCE</h2>
-        <a href="#" class="active block py-2 px-3 rounded">HOME</a>
-        <a href="sub.html" class="block py-2 px-3 rounded">SUBSCRIPTION</a>
-        <a href="wallet.html" class="block py-2 px-3 rounded">WALLETS</a>
-        <a href="task.html" class="block py-2 px-3 rounded">JOB</a>
-        <a href="analytics.html" class="block py-2 px-3 rounded">ANALYTICS</a>
-        <a href="settings.html" class="block py-2 px-3 rounded">SETTINGS</a>
-        <a href="help.html" class="block py-2 px-3 rounded">HELP</a>
-      </div>
-      <div class="footer">
-        <button class="bg-red-500 text-white px-4 py-2 rounded">
-          <a href="sub.html">Logout</a>
-        </button>    
-      </div>
-    </aside>
+<body class="flex h-screen overflow-hidden">
+  <!-- Sidebar -->
+  <aside id="sidebar" class="fixed md:static top-0 left-0 w-64 h-full bg-green-900 text-white flex flex-col justify-between p-4 transform md:translate-x-0 -translate-x-full transition-transform duration-300 z-50">
+    <div>
+      <h2 class="text-xl font-bold mb-6">GMD FINANCE</h2>
+      <a href="#" class="block py-2 px-3 rounded hover:bg-green-700 active:bg-green-700">HOME</a>
+      <a href="sub.html" class="block py-2 px-3 rounded hover:bg-green-700">SUBSCRIPTION</a>
+      <a href="wallet.html" class="block py-2 px-3 rounded hover:bg-green-700">WALLETS</a>
+      <a href="task.html" class="block py-2 px-3 rounded hover:bg-green-700">JOB</a>
+      <a href="analytics.html" class="block py-2 px-3 rounded hover:bg-green-700">ANALYTICS</a>
+      <a href="settings.html" class="block py-2 px-3 rounded hover:bg-green-700">SETTINGS</a>
+      <a href="help.html" class="block py-2 px-3 rounded hover:bg-green-700">HELP</a>
+    </div>
+    <div class="mt-6">
+      <a href="sub.html" class="block text-center bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">Logout</a>
+    </div>
+  </aside>
 
-    <!-- Main content -->
-    <main class="main">
-      <!-- Topbar -->
-      <div class="topbar bg-white shadow-md rounded-xl px-6 py-4 mb-6 flex justify-between items-center">
-        <div class="flex flex-col">
-          <h1 class="text-2xl font-bold text-green-700">Level-Based Task</h1>
-          <span class="text-sm text-gray-500">Earn more as you level up!</span>
-        </div>
-        <div class="flex items-center gap-4">
-          <div id="user-id-label" class="text-sm font-semibold text-green-800">
-            User ID: <span id="user-id" class="cursor-pointer border-b border-dotted border-green-700" title="Click to copy">Loading...</span>
-          </div>
-          <nav>
-            <a href="#" class="text-green-800 font-semibold hover:underline">Dashboard</a>
-            <a href="#" class="text-green-800 font-semibold hover:underline ml-4">Support</a>
-          </nav>
+  <!-- Main content -->
+  <div class="flex-1 flex flex-col overflow-y-auto">
+    <!-- Topbar -->
+    <div class="bg-white shadow-md px-4 py-4 flex items-center justify-between md:justify-between border-b sticky top-0 z-40">
+      <div class="flex items-center gap-4">
+        <button id="burger" class="md:hidden focus:outline-none">
+          <svg class="w-6 h-6 text-green-900" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+        <div>
+          <h1 class="text-xl font-bold text-green-800">Level-Based Task</h1>
+          <p class="text-sm text-gray-500">Earn more as you level up!</p>
         </div>
       </div>
+      <div class="flex items-center gap-4 text-sm text-green-800 font-semibold">
+        <div id="user-id-label">
+          User ID: <span id="user-id" class="cursor-pointer border-b border-dotted border-green-700" title="Click to copy">Loading...</span>
+        </div>
+        <a href="#" class="hover:underline">Dashboard</a>
+        <a href="#" class="hover:underline ml-2">Support</a>
+      </div>
+    </div>
 
+    <!-- Content Wrapper -->
+    <main class="p-4 md:p-8">
       <!-- Image Slider -->
       <div class="slider-container">
         <div id="slider" class="slider">
-          <img src="IMAGES/certificate.png"alt="img." />
-          <img src="IMAGES/robot.png"alt="img.." />
-          <img src="IMAGES/robot2.png" alt="img..." />
+          <img src="IMAGES/certificate.png" alt="Certificate" />
+          <img src="IMAGES/robot.png" alt="Robot" />
+          <img src="IMAGES/robot2.png" alt="Robot 2" />
         </div>
       </div>
 
-      <!-- Balance Section -->
-      <div class="balance-section mb-12">
-        <div class="text-sm text-gray-600">Balance</div>
-        <div class="balance-amount" id="balance">0.00 USDT</div>
-        <div class="flex gap-4 mt-4">
-          <button class="bg-green-700 text-white px-6 py-2 rounded hover:bg-green-800">Deposit USDT</button>
-          <button class="bg-green-700 text-white px-6 py-2 rounded hover:bg-green-800">Withdraw USDT</button>
+      <!-- Balance -->
+      <div class="mb-10">
+        <p class="text-gray-600 text-sm">Balance</p>
+        <p class="text-3xl font-bold text-green-800" id="balance">0.00 USDT</p>
+        <div class="flex flex-wrap gap-4 mt-4">
+          <button class="bg-green-700 hover:bg-green-800 text-white px-6 py-2 rounded">Deposit USDT</button>
+          <button class="bg-green-700 hover:bg-green-800 text-white px-6 py-2 rounded">Withdraw USDT</button>
         </div>
       </div>
 
-      <!-- Membership Table Section -->
-      <div class="ml-1 mt-8 w-full max-w-5xl bg-white shadow-md rounded-2xl overflow-hidden border border-gray-200">
+      <!-- Membership Table -->
+      <div class="overflow-x-auto bg-white rounded-2xl shadow border border-gray-200 mb-10">
         <div class="bg-green-800 text-white py-4 px-6 flex justify-between items-center rounded-t-2xl">
           <h2 class="text-2xl font-semibold">GMD</h2>
           <div class="bg-black rounded-full w-12 h-12 flex items-center justify-center border-4 border-green-400 text-green-300 text-lg font-semibold">
             GMD
           </div>
         </div>
-
-        <div class="p-6">
-          <h1 class="text-lg font-bold text-green-700 mb-4">MEMBERSHIP SUBSCRIPTION</h1>
-          <div class="overflow-x-auto">
-            <table class="min-w-full text-left border-collapse rounded-xl overflow-hidden">
-              <thead class="bg-green-600 text-white">
-                <tr>
-                  <th class="px-4 py-2">MEMBERSHIP LEVEL</th>
-                  <th class="px-4 py-2">SUBSCRIPTION AMOUNT (USDT)</th>
-                  <th class="px-4 py-2">DAILY VIEWING TASKS</th>
-                  <th class="px-4 py-2">DAILY EARNINGS (USDT)</th>
-                  <th class="px-4 py-2">TOTAL EARNINGS (USDT)</th>
-                  <th class="px-4 py-2">VALIDITY PERIOD (DAYS)</th>
-                </tr>
-              </thead>
-              <tbody class="text-gray-800">
-                <tr class="bg-white"><td class="px-4 py-2">AMAZON PRIME</td><td class="px-4 py-2">70</td><td class="px-4 py-2">2</td><td class="px-4 py-2">2.5</td><td class="px-4 py-2">200</td><td class="px-4 py-2">80</td></tr>
-                <tr class="bg-green-50"><td class="px-4 py-2">NETFLIX</td><td class="px-4 py-2">210</td><td class="px-4 py-2">4</td><td class="px-4 py-2">8.5</td><td class="px-4 py-2">680</td><td class="px-4 py-2">80</td></tr>
-                <tr class="bg-white"><td class="px-4 py-2">HBO MAX</td><td class="px-4 py-2">580</td><td class="px-4 py-2">6</td><td class="px-4 py-2">22</td><td class="px-4 py-2">1760</td><td class="px-4 py-2">80</td></tr>
-                <tr class="bg-green-50"><td class="px-4 py-2">PARAMOUNT</td><td class="px-4 py-2">950</td><td class="px-4 py-2">8</td><td class="px-4 py-2">36</td><td class="px-4 py-2">2880</td><td class="px-4 py-2">80</td></tr>
-                <tr class="bg-white"><td class="px-4 py-2">WALT DISNEY</td><td class="px-4 py-2">2500</td><td class="px-4 py-2">12</td><td class="px-4 py-2">96</td><td class="px-4 py-2">7860</td><td class="px-4 py-2">80</td></tr>
-                <tr class="bg-green-50"><td class="px-4 py-2">SONY</td><td class="px-4 py-2">5000</td><td class="px-4 py-2">14</td><td class="px-4 py-2">192</td><td class="px-4 py-2">15428</td><td class="px-4 py-2">80</td></tr>
-                <tr class="bg-white"><td class="px-4 py-2">UNIVERSAL PICTURES</td><td class="px-4 py-2">10000</td><td class="px-4 py-2">16</td><td class="px-4 py-2">385</td><td class="px-4 py-2">30800</td><td class="px-4 py-2">80</td></tr>
-              </tbody>
-            </table>
-          </div>
+        <div class="p-4 md:p-6">
+          <h3 class="text-lg font-bold text-green-800 mb-4">MEMBERSHIP SUBSCRIPTION</h3>
+          <table class="min-w-full text-sm border-collapse">
+            <thead class="bg-green-600 text-white">
+              <tr>
+                <th class="px-4 py-2 text-left">MEMBERSHIP LEVEL</th>
+                <th class="px-4 py-2 text-left">SUBSCRIPTION AMOUNT (USDT)</th>
+                <th class="px-4 py-2 text-left">DAILY TASKS</th>
+                <th class="px-4 py-2 text-left">DAILY EARNINGS</th>
+                <th class="px-4 py-2 text-left">TOTAL EARNINGS</th>
+                <th class="px-4 py-2 text-left">VALIDITY</th>
+              </tr>
+            </thead>
+            <tbody class="text-gray-800">
+              <tr class="bg-white"><td class="px-4 py-2">AMAZON PRIME</td><td class="px-4 py-2">70</td><td class="px-4 py-2">2</td><td class="px-4 py-2">2.5</td><td class="px-4 py-2">200</td><td class="px-4 py-2">80</td></tr>
+              <tr class="bg-green-50"><td class="px-4 py-2">NETFLIX</td><td class="px-4 py-2">210</td><td class="px-4 py-2">4</td><td class="px-4 py-2">8.5</td><td class="px-4 py-2">680</td><td class="px-4 py-2">80</td></tr>
+              <tr class="bg-white"><td class="px-4 py-2">HBO MAX</td><td class="px-4 py-2">580</td><td class="px-4 py-2">6</td><td class="px-4 py-2">22</td><td class="px-4 py-2">1760</td><td class="px-4 py-2">80</td></tr>
+              <tr class="bg-green-50"><td class="px-4 py-2">PARAMOUNT</td><td class="px-4 py-2">950</td><td class="px-4 py-2">8</td><td class="px-4 py-2">36</td><td class="px-4 py-2">2880</td><td class="px-4 py-2">80</td></tr>
+              <tr class="bg-white"><td class="px-4 py-2">WALT DISNEY</td><td class="px-4 py-2">2500</td><td class="px-4 py-2">12</td><td class="px-4 py-2">96</td><td class="px-4 py-2">7860</td><td class="px-4 py-2">80</td></tr>
+              <tr class="bg-green-50"><td class="px-4 py-2">SONY</td><td class="px-4 py-2">5000</td><td class="px-4 py-2">14</td><td class="px-4 py-2">192</td><td class="px-4 py-2">15428</td><td class="px-4 py-2">80</td></tr>
+              <tr class="bg-white"><td class="px-4 py-2">UNIVERSAL</td><td class="px-4 py-2">10000</td><td class="px-4 py-2">16</td><td class="px-4 py-2">385</td><td class="px-4 py-2">30800</td><td class="px-4 py-2">80</td></tr>
+            </tbody>
+          </table>
         </div>
       </div>
-      <!-- About GMD Section -->
-<section class="mt-12 bg-#90ee90 p-6 rounded-2xl shadow border border-gray-200">
-  <h1 class="text-align: right; text-green-1000 mb-12">ABOUT US:</h1>
-  <h2 class="text-2xl font-bold text-green-800 mb-4">Financial Services, Security & Funding Source</h2>
-  <p class="text-gray-700 leading-relaxed">
-    Green Media Finance (GMD) operates as a mutually beneficial digital ecosystem where users earn rewards by engaging with entertainment-based content such as movies, advertisements, and media reviews. This platform leverages user interaction to generate monetized value while providing financial benefits to its participants.
-  </p>
-  <p class="text-gray-700 leading-relaxed mt-4">
-    GMD bridges global and African entertainment industries—creating an inclusive hub for cultural exchange, creativity, and commercial synergy. Through strategic partnerships, media analysis, and ad engagement, users and collaborators are empowered to generate income while promoting transcontinental content exposure.
-  </p>
-  <p class="text-gray-700 leading-relaxed mt-4">
-    Our commitment to secure and transparent financial interactions ensures that all transactions, earnings, and tasks are handled with integrity, using blockchain-backed assets like USDT to support seamless, international payouts.
-  </p>
-</section>
 
+      <!-- About GMD -->
+      <section class="bg-green-50 p-6 rounded-2xl shadow border border-gray-200">
+        <h1 class="text-2xl font-bold text-green-800 mb-4">ABOUT US</h1>
+        <p class="text-gray-700 mb-4">Green Media Finance (GMD) operates as a mutually beneficial digital ecosystem where users earn rewards by engaging with entertainment-based content such as movies, advertisements, and media reviews.</p>
+        <p class="text-gray-700 mb-4">GMD bridges global and African entertainment industries—creating an inclusive hub for cultural exchange, creativity, and commercial synergy.</p>
+        <p class="text-gray-700">Our commitment to secure and transparent financial interactions ensures that all transactions, earnings, and tasks are handled with integrity, using blockchain-backed assets like USDT.</p>
+      </section>
     </main>
   </div>
+
+  <!-- Scripts -->
   <script>
+    // Toggle sidebar
+    document.getElementById('burger').addEventListener('click', () => {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('-translate-x-full');
+    });
+
+    // Slider
     document.addEventListener('DOMContentLoaded', () => {
       let currentIndex = 0;
       const slider = document.getElementById('slider');
       const slides = slider.children;
-  
-      function showNextSlide() {
+      setInterval(() => {
         currentIndex = (currentIndex + 1) % slides.length;
         slider.style.transform = `translateX(-${currentIndex * 100}%)`;
-      }
-  
-      setInterval(showNextSlide, 4000); // every 4 seconds
+      }, 4000);
     });
   </script>
-  <script>
-    // You can later dynamically update the balance here if needed
-    
-  </script>
+
+  <!-- Supabase Integration -->
   <script type="module">
-  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+    const supabase = createClient(
+      'https://humgckbdthdzkbbvqrbm.supabase.co',
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh1bWdja2JkdGhkemtiYnZxcmJtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDc0OTk0NTcsImV4cCI6MjA2MzA3NTQ1N30.uaSNJAB1OEZk9ZAW7i_wA3QJBkDLuyrvXO3yHeKecjI'
+    );
 
-const supabase = createClient(
-  'https://humgckbdthdzkbbvqrbm.supabase.co',
-  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh1bWdja2JkdGhkemtiYnZxcmJtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDc0OTk0NTcsImV4cCI6MjA2MzA3NTQ1N30.uaSNJAB1OEZk9ZAW7i_wA3QJBkDLuyrvXO3yHeKecjI'
-  );
-  
-  supabase.auth.getSession().then(({ data: { session }, error }) => {
-  if (session) {
-    console.log("User logged in:", session.user);
-    // Continue to load dashboard info
-  } else {
-    console.log("No session found or user not confirmed");
-  }
-});
+    const balanceEl = document.getElementById('balance');
+    const userIdSpan = document.getElementById('user-id');
 
-const balanceEl = document.getElementById('balance');
-const userIdSpan = document.getElementById('user-id');
+    async function fetchUserData() {
+      const { data: { user }, error: authError } = await supabase.auth.getUser();
+      if (authError || !user) return;
 
-async function fetchUserData() {
-  const {
-    data: { user },
-    error: authError
-  } = await supabase.auth.getUser();
+      const { data, error } = await supabase
+        .from('users')
+        .select('bonus, user_id')
+        .eq('id', user.id)
+        .single();
 
-  if (authError || !user) {
-    console.error('Not authenticated');
-    return;
-  }
+      if (!error && data) {
+        balanceEl.textContent = `${data.bonus.toFixed(2)} USDT`;
+        userIdSpan.textContent = data.user_id;
+        userIdSpan.onclick = () => {
+          navigator.clipboard.writeText(data.user_id);
+          userIdSpan.textContent = `Copied! ${data.user_id}`;
+          setTimeout(() => { userIdSpan.textContent = data.user_id }, 1500);
+        };
+      }
+    }
 
-  const { data, error } = await supabase
-    .from('users')
-    .select('bonus, user_id')
-    .eq('id', user.id)
-    .single();
-
-  if (error) {
-    console.error('Error fetching user data:', error.message);
-    return;
-  }
-
-  balanceEl.textContent = `${data.bonus.toFixed(2)} USDT`;
-  userIdSpan.textContent = data.user_id;
-
-  userIdSpan.onclick = () => {
-    navigator.clipboard.writeText(data.user_id);
-    userIdSpan.textContent = `Copied! ${data.user_id}`;
-    setTimeout(() => {
-      userIdSpan.textContent = data.user_id;
-    }, 1500);
-  };
-}
-
-fetchUserData();
-
-</script>
+    fetchUserData();
+  </script>
 </body>
 </html>
